Change icon color, added button borders, fixed footer spacing.

--- a/google_css/style.css
+++ b/google_css/style.css
@@ -62,6 +62,10 @@ a:hover {
     position: relative;
 }
 
+.material-icons.md-dark.md-inactive { 
+    color: rgba(0, 0, 0, 0.26); 
+}
+
 #search, #voice {
     position: absolute;
     top: 0;
@@ -100,13 +104,19 @@ a:hover {
     justify-content: center;
 }
 
+.button:hover{
+    box-shadow: 0 0 2px 1px #000000;
+    border: 2px solid #eee;
+}
+
 .button {
     margin-left: 10px;
     margin-right: 10px;
     padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
-    background: #e9e8e8
+    background: #e9e8e8;
+    border: 2px solid transparent;
 }
 
 #links {
@@ -115,8 +125,12 @@ a:hover {
 }
 
 #footer-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    column-gap: 1em;
     color: rgb(94, 94, 94);
-    word-spacing: 30px;
+    /*word-spacing: 30px;*/
     background: #eee;
     border-top: 1px solid #eee;
 }
